반응형완료

--- a/index.html
+++ b/index.html
@@ -130,12 +130,11 @@
                     About
                 </h2>
                 <div class="aboutme-wrap">
-                    <div class="aboutme-profile mr-4 text-center" data-aos-delay="200" data-aos-duration="1000"
-                        data-aos="fade-right">
-                        <div class="pc-photo w-75">
+                    <div class="aboutme-profile text-center">
+                        <div class="pc-photo" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-right">
                             <img class="photo" src="./image/mincheol.jpg" alt="">
                         </div>
-                        <div class="mobile-photo w-75 hidden">
+                        <div class="mobile-photo" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
                             <div class="photo-back"></div>
                             <img class="photo id-photo" src="./image/증명사진.jpg" alt="">
                         </div>
@@ -202,8 +201,8 @@
                             </div>
                         </div>
                         <hr data-aos-delay="450" data-aos-duration="1000" data-aos="fade-left">
-                        <div class="d-flex" data-aos-delay="500" data-aos-duration="1000" data-aos="fade-left">
-                            <div class="license">
+                        <div class="license-edu">
+                            <div class="license" data-aos-delay="500" data-aos-duration="1000" data-aos="fade-left">
                                 <div class="tag">License</div>
                                 <div class="ml-3">
                                     <div class="get-date d-inline-block">2023. 01</div>
@@ -229,7 +228,8 @@
                                 </div>
                             </div>
                             <div class="verticle-line"></div>
-                            <div class="education">
+                            <hr data-aos-delay="525" data-aos-duration="1000" data-aos="fade-left">
+                            <div class="education" data-aos-delay="550" data-aos-duration="1000" data-aos="fade-left">
                                 <div class="tag">Education</div>
                                 <div class="ml-3">
                                     <!-- <div class="get-date">2022. 09 ~ 2023. 03</div>
