모바일상태 수정

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <!-- <span>02.</span> -->
                     <div class="exp-title">
                         <div>Experience</div>
-                        <div style="margin-left:15rem">& Project</div>
+                        <div class="project-title" style="margin-left: 15rem;">& Project</div>
                     </div>
                 </h2>
                 <div class="exprience-wrap" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
