스크롤오류수정

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="aboutme-text">
-                        <div class="info" data-aos-delay="300" data-aos-duration="1000" data-aos="fade-left">
+                        <div class="info" data-aos-delay="300" data-aos-duration="1000" data-aos="fade-right">
                             <div class="tag">Info</div>
                             <div class="ml-3">
                                 <div class="d-flex align-items-center mb-2">
@@ -160,8 +160,8 @@
                                 </div>
                             </div>
                         </div>
-                        <hr data-aos-delay="350" data-aos-duration="1000" data-aos="fade-left">
-                        <div class="skills" data-aos-delay="400" data-aos-duration="1000" data-aos="fade-left">
+                        <hr data-aos-delay="350" data-aos-duration="1000" data-aos="fade-right">
+                        <div class="skills" data-aos-delay="400" data-aos-duration="1000" data-aos="fade-right">
                             <div class="tag">Skills</div>
                             <div class="ml-3">
                                 <span class="skills-wrap">
@@ -200,9 +200,9 @@
                                 </span>
                             </div>
                         </div>
-                        <hr data-aos-delay="450" data-aos-duration="1000" data-aos="fade-left">
+                        <hr data-aos-delay="450" data-aos-duration="1000" data-aos="fade-right">
                         <div class="license-edu">
-                            <div class="license" data-aos-delay="500" data-aos-duration="1000" data-aos="fade-left">
+                            <div class="license" data-aos-delay="500" data-aos-duration="1000" data-aos="fade-right">
                                 <div class="tag">License</div>
                                 <div class="ml-3">
                                     <div class="get-date d-inline-block">2023. 01</div>
@@ -228,8 +228,8 @@
                                 </div>
                             </div>
                             <div class="verticle-line"></div>
-                            <hr data-aos-delay="525" data-aos-duration="1000" data-aos="fade-left">
-                            <div class="education" data-aos-delay="550" data-aos-duration="1000" data-aos="fade-left">
+                            <hr data-aos-delay="525" data-aos-duration="1000" data-aos="fade-right">
+                            <div class="education" data-aos-delay="550" data-aos-duration="1000" data-aos="fade-right">
                                 <div class="tag">Education</div>
                                 <div class="ml-3">
                                     <!-- <div class="get-date">2022. 09 ~ 2023. 03</div>
@@ -301,7 +301,7 @@
     </script>
 
     <script type="text/html" id="panel-elem">
-        <div class="project-list" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-left">
+        <div class="project-list" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-right">
             <div class=" project-name">
                 <div class="pb-0">{{NAME}}</div>
                 <div class="m-0 p-0">
