메인 물결 추가

--- a/index.html
+++ b/index.html
@@ -121,16 +121,27 @@
             </div> -->
             <!-- Main -->
             <article id="main" class="article-box text-center pf-main" style="min-height: 100vh;">
-                <!-- 저는 웹사이트를 더욱 실용적이며 즐겁게 사용할 수 있도록 만드는 목표를 가지고 있는 -->
+                <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28"
+                    preserveAspectRatio="none" shape-rendering="auto">
+                    <defs>
+                        <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                    </defs>
+                    <g class="parallax">
+                        <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                        <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                        <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                        <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+                    </g>
+                </svg>
+
                 <div class="intro-text-wrap">
-                    <h1 class="intro-text font-weight-bold mb-2" data-aos-delay="500" data-aos="fade-up">
-                        <span>안녕하세요!
-                            <!-- <br>저는 웹사이트를 더욱 실용적이며 즐겁게 사용할 수 있도록 만드는 목표를 가지고 있는 -->
-                        </span>
+                    <h3 class="intro-text font-weight-bold mb-4" data-aos-delay="500" data-aos="fade-up">
+                        WELCOME!
+                    </h3>
+                    <h1 class="intro-text font-weight-bold mb-5" data-aos-delay="600" data-aos="fade-up">
+                        Mc's PORTFOLIO
                     </h1>
-                    <h1 class="intro-text font-weight-bold " data-aos-delay="600" data-aos="fade-up">
-                        <span>웹퍼블리셔 <strong>김민철</strong>입니다.</span>
-                    </h1>
+                    <h2 data-aos-delay="700" data-aos="fade-up">성실함과 꼼꼼함으로 똘똘뭉친 <br>웹 퍼블리셔 김민철입니다.</h2>
                 </div>
 
                 <!-- 스크롤 버튼 -->
