--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <!-- remix icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="./css/loading.css"> -->
     <!-- common -->
     <link rel="stylesheet" href="./css/common.css">
     <style>
@@ -70,55 +69,7 @@
             <div class="bar"></div>
         </div>
 
-        <section class="full-wrap h-100 m-auto">
-            <!-- <div id="loader">
-                <div class="face">
-                    <?xml version="1.0" encoding="utf-8" standalone="yes"?>
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        width="270px" height="270px" viewBox="0.032 0 270 270" overflow="visible"
-                        enable-background="new 0.032 0 270 270" xml:space="preserve">
-                        <defs>
-                        </defs>
-                        <g id="supervisior">
-                            <g class="head">
-                                <path fill="#58585A"
-                                    d="M135,10c33.389,0,64.778,13.002,88.388,36.612S260,101.611,260,135s-13.003,64.779-36.612,88.388
-                              S168.389,260,135,260s-64.778-13.002-88.388-36.612C23.002,199.779,10,168.389,10,135s13.002-64.779,36.612-88.388
-                              C70.222,23.002,101.611,10,135,10 M135,0C60.442,0,0,60.441,0,135s60.442,135,135,135s135-60.441,135-135S209.558,0,135,0L135,0z" />
-                            </g>
-                            <g id="eyeLeft">
-                                <g class="eyeLeft">
-                                    <circle class="eye" fill="none" stroke="#58585A" stroke-width="4" stroke-linecap="round"
-                                        stroke-miterlimit="10" cx="66.063" cy="127.51" r="18.849" />
-                                    <circle class="pupil" fill="#58585A" cx="66.063" cy="127.511" r="8.949" />
-                                </g>
-                                <path class="closedLeft" fill="none" stroke="#58585A" stroke-width="4" stroke-linecap="round"
-                                    stroke-miterlimit="10" d="
-                          M47.238,127.972c0.247,10.194,8.57,18.387,18.824,18.387s18.579-8.193,18.826-18.387" />
-                            </g>
-                            <g id="eyeRight">
-                                <g class="eyeRight">
-                                    <circle class="eye" fill="none" stroke="#58585A" stroke-width="4" stroke-linecap="round"
-                                        stroke-miterlimit="10" cx="203.936" cy="127.51" r="18.849" />
-                                    <circle class="pupil" fill="#58585A" cx="203.935" cy="127.511" r="8.949" />
-                                </g>
-                                <path class="closedRight" fill="none" stroke="#58585A" stroke-width="4" stroke-linecap="round"
-                                    stroke-miterlimit="10" d="
-                          M185.11,127.972c0.247,10.194,8.571,18.387,18.824,18.387c10.255,0,18.579-8.193,18.826-18.387" />
-                            </g>
-                            <g class="mouth">
-                                <polyline class="bar" fill="none" stroke="#58585A" stroke-width="4" stroke-linecap="round"
-                                    stroke-miterlimit="10" points="
-                          111.532,232.832 135.032,232.832 158.532,232.832 " />
-                                <path class="smile" fill="none" stroke="#58585A" stroke-width="4" stroke-linecap="round"
-                                    stroke-miterlimit="10" d="
-                          M62.485,168.615c0.951,35.593,33.016,64.198,72.511,64.198c39.503,0,71.566-28.605,72.519-64.198" />
-                            </g>
-                        </g>
-                    </svg>
-                </div>
-                <div class="loading-bar"></div>
-            </div> -->
+        <section class="full-wrap m-auto">
             <!-- Main -->
             <article id="main" class="article-box text-center pf-main" style="min-height: 100vh;">
                 <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28"
@@ -347,6 +298,9 @@
                 </article>
             </article>
         </section>
+        <footer>
+            v푸터
+        </footer>
     </div>
     <button class="move-top-btn btn border border-dark" onclick="moveEvent(this, true)"><i
             class="ri-arrow-up-s-line"></i></button>
@@ -399,137 +353,7 @@
         <hr class="p-0 m-0">
     </script>
 
-    <script>
-        // 경력 & 프로젝트 초기화 event
-        var initExprience = function (elem) {
-
-            // 회사정보입력
-            let experienceWrap = document.querySelector(".exprience-wrap");
-            for (let i = 0; i < exprienceDatas.length; i++) {
-                companyElemHtml = document.getElementById("company-elem").innerHTML;
-                companyElemHtml = companyElemHtml.replaceAll(/{{COMPANY_DATE}}/gi, exprienceDatas[i].date);
-                companyElemHtml = companyElemHtml.replaceAll(/{{COMPANY_NAME}}/gi, exprienceDatas[i].name);
-                companyElemHtml = companyElemHtml.replaceAll(/{{COMPANY_DETAIL}}/gi, exprienceDatas[i].detail);
-                companyElemHtml = companyElemHtml.replaceAll(/{{SKILL_TOOL}}/gi, exprienceDatas[i].skills);
-                companyElemHtml = companyElemHtml.replaceAll(/{{COMPANY_DESCRIPT}}/gi, exprienceDatas[i].description);
-                companyElemHtml = companyElemHtml.replaceAll(/{{COMPANY_ID}}/gi, exprienceDatas[i].id);
-                companyElemHtml = companyElemHtml.replaceAll(/{{ID}}/gi, exprienceDatas[i].id);
-
-                experienceWrap.innerHTML += companyElemHtml;
-
-                // 프로젝트리스트 추가
-                let panelWrap = document.querySelector(".panel-" + exprienceDatas[i].id);
-                let projectDatas = exprienceDatas[i].project_list;
-                for (let j = 0; j < projectDatas.length; j++) {
-                    panelElemHtml = document.getElementById("panel-elem").innerHTML;
-                    panelElemHtml = panelElemHtml.replaceAll(/{{NAME}}/gi, projectDatas[j].name);
-                    panelElemHtml = panelElemHtml.replaceAll(/{{LINK}}/gi, projectDatas[j].url);
-                    panelElemHtml = panelElemHtml.replaceAll(/{{IS_VIEW}}/gi, projectDatas[j].url == '' ? 'hidden' : '');
-                    panelElemHtml = panelElemHtml.replaceAll(/{{ADMIN_LINK}}/gi, projectDatas[j].admin_url);
-                    panelElemHtml = panelElemHtml.replaceAll(/{{IS_ADMIN_VIEW}}/gi, projectDatas[j].admin_url == '' ? 'hidden' : '');
-                    panelElemHtml = panelElemHtml.replaceAll(/{{DESCRIBED}}/gi, projectDatas[j].described);
-                    panelElemHtml = panelElemHtml.replaceAll(/{{DETAIL}}/gi, projectDatas[j].detail);
-                    panelElemHtml = panelElemHtml.replaceAll(/{{USE_SKILL}}/gi, projectDatas[j].use_skill);
-
-                    panelWrap.innerHTML += panelElemHtml;
-                }
-            }
-
-
-
-            // 아코디언 추가
-            let accElems = document.querySelectorAll(".accordion");
-            for (let i = 0; i < accElems.length; i++) {
-                accElems[i].addEventListener("click", function () {
-                    this.classList.toggle("active");
-                    let panel = this.nextElementSibling;
-                    if (panel.style.maxHeight) {
-                        panel.style.maxHeight = null;
-                    } else {
-                        panel.style.maxHeight = panel.scrollHeight + "px";
-                    }
-                });
-            }
-        }
-
-        let navItems = document.querySelectorAll(".nav-item");
-        function moveEvent(elem, up = false) {
-            let target = elem.dataset.target;
-
-            for (let i = 0; i < navItems.length; i++) {
-                navItems[i].classList.remove("active");
-            }
-
-            elem.classList.add("active");
-            if (up) {
-                window.scrollTo({ top: 0, left: 0, behavior: 'smooth' });
-            } else {
-                document.getElementById(target).scrollIntoView({ behavior: 'smooth' })
-            }
-        }
-
-        let mainLoc = document.getElementById('main').offsetTop;
-        let introLoc = document.querySelector('.pf-intro').offsetTop;
-        let aboutLoc = document.getElementById('about').offsetTop;
-        let expproLoc = document.getElementById('exp_pro').offsetTop;
-        let headerHeight = document.querySelector('header').offsetHeight;
-        window.addEventListener('scroll', () => {
-            let nowLoc = window.scrollY;
-
-            for (let i = 0; i < navItems.length; i++) {
-                navItems[i].classList.remove("active");
-            }
-
-            if (nowLoc >= mainLoc && nowLoc < aboutLoc) {
-                document.querySelector('.main-item').classList.add('active');
-            } else if (nowLoc >= aboutLoc && nowLoc < expproLoc) {
-                document.querySelector('.about-item').classList.add('active');
-            } else if (nowLoc >= expproLoc) {
-                document.querySelector('.exp-item').classList.add('active');
-            }
-
-            // 헤더 nav-item 색 변경
-            if (nowLoc >= (introLoc - headerHeight)) {
-                document.querySelector('header').style.color = '#000';
-                document.querySelector('header').style.transition = '0.4s';
-                for (let i = 0; i < navItems.length; i++) {
-                    navItems[i].style.setProperty('--background', '#000');
-                }
-            } else {
-                document.querySelector('header').style.color = '#fff'
-                document.querySelector('header').style.transition = '0.4s';
-                for (let i = 0; i < navItems.length; i++) {
-                    navItems[i].style.setProperty('--background', '#fff');
-                }
-            }
-
-            let windowScrollTop = $(window).scrollTop();
-            let height = $(document).height() - $(window).height();
-            let percent = Math.floor(windowScrollTop / height * 100);
-
-            document.querySelector(".bar").style.width = percent + "%";
-
-        });
-
-        // 처음 페이지 로딩 시 경력사항 초기화
-        initExprience("init");
-
-        // 아코디언
-        $("#accordion").accordion();
-
-        const menu = document.querySelector(".wrap-bar");
-        let count = 0;
-
-        menu.addEventListener("click",()=>{
-            menu.classList.toggle("active");
-            count ++;
-            if((count&2) === 0){
-                menu.classList.add('deactive');
-            }
-        });
-
-        AOS.init();
-    </script>
+    <script src="./js/common.js"></script>
 </body>
 
 </html>
