--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
 </head>
 
 <body>
+    <div class="mobile-side">
+        <ol class="d-block text-white text-center">
+            <li class="nav-item main-item active" onclick="moveEvent(this)" data-target="main">
+                <a class="cursor-pointer">
+                    <h1 class="nav-text"> Main</h1>
+                </a>
+            </li>
+            <li class="nav-item about-item" onclick="moveEvent(this)" data-target="about" style="margin: 2rem 0px;">
+                <a class="cursor-pointer">
+                    <h1 class="nav-text"> About</h1>
+                </a>
+            </li>
+            <li class="nav-item exp-item" onclick="moveEvent(this)" data-target="exp_pro">
+                <a class="cursor-pointer">
+                    <h1 class="nav-text">Experience & Project</h1>
+                </a>
+            </li>
+        </ol>
+    </div>
     <div id="wrap">
         <!-- header -->
         <header class="w-100 position-fixed d-flex align-items-center justify-content-between" data-aos-delay="0"
