--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
         <section class="full-wrap m-auto">
             <!-- Main -->
             <article id="main" class="article-box text-center pf-main" style="min-height: 100vh;">
-                <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28"
-                    preserveAspectRatio="none" shape-rendering="auto">
+                <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
                     <defs>
-                        <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                        <path id="gentle-wave"
+                            d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
                     </defs>
                     <g class="parallax">
                         <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
@@ -276,7 +277,8 @@
                                         <!-- <font size="2" color="gray">한국산업인력공단</font> -->
                                     </div>
                                 </div>
-                                <div class="verticle-line" data-aos-delay="600" data-aos-duration="1000" data-aos="fade-up"></div>
+                                <div class="verticle-line" data-aos-delay="600" data-aos-duration="1000"
+                                    data-aos="fade-up"></div>
                                 <hr data-aos-delay="525" data-aos-duration="1000" data-aos="fade-right">
                                 <div class="education" data-aos-delay="550" data-aos-duration="1000"
                                     data-aos="fade-right">
