--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </header>
         <div class="progress d-block" data-aos-delay="0" data-aos="fade-down">
             <div class="bar"></div>
+            <div class="circle"></div>
         </div>
 
         <section class="full-wrap m-auto">
@@ -348,7 +349,7 @@
             </div>
             <div class="company-descript">{{COMPANY_DESCRIPT}}</div>
             <div class="skills-tools"><font size="3" color="#b34831">[사용기술 & 협업툴]</font> {{SKILL_TOOL}}</div>
-            <div class="accordion project-elem cursor-pointer company-{{COMPANY_ID}}" data-id="{{COMPANY_ID}}">
+            <div class="accordion project-elem cursor-pointer font-weight-bold text-danger company-{{COMPANY_ID}}" data-id="{{COMPANY_ID}}">
                 View Project
             </div>
             <div class="panel panel-{{ID}}">
