--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                             <strong class="main-intro-title">education</strong>
                             <ul class="main-intro-sub-list">
                                 <!-- <li class="main-intro-sub-item">- 라인컴퓨터아트 (인테리어디자인)</li> -->
+                                <li class="main-intro-sub-item">- 그린컴퓨터아카데미 (웹디자인)</li>
                                 <li class="main-intro-sub-item">- 그린컴퓨터아카데미 (AutoCad)</li>
                                 <li class="main-intro-sub-item">- 비트캠프 (Web 개발)</li>
                                 <li class="main-intro-sub-item">- 한국산업기술대학교</li>
@@ -288,6 +289,9 @@
                                         <!-- <div class="get-date">2022. 09 ~ 2023. 03</div>
                                     <font size="2" color="gray">(라인컴퓨터아트)</font>
                                     <span class="get-name">환경인테리어디자인 (AutoCad, 3dMax, Sketchup) 수료예정</span> -->
+                                        <div class="get-date">2023. 02</div>
+                                        <font size="2" color="gray">(강남 그린컴퓨터아카데미)</font>
+                                        <span class="get-name">실무능력까지 길러주는 인터랙티브 웹 디자인</span>
                                         <div class="get-date">2022. 08 ~ 2022. 09</div>
                                         <font size="2" color="gray">(그린컴퓨터아카데미)</font>
                                         <span class="get-name">빠른설계를위한 AutoCad</span>
@@ -315,12 +319,13 @@
                         </div>
                     </h2>
                     <div class="exprience-wrap" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
-
+                        
                     </div>
                 </article>
             </article>
         </section>
         <footer>
+            봐주셔서 감사합니다!
         </footer>
     </div>
     <button class="move-top-btn btn border border-dark" onclick="moveEvent(this, true)"><i
