--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <h1 class="intro-text font-weight-bold mb-5" data-aos-delay="2600" data-aos="fade-up">
                         Mc's PORTFOLIO
                     </h1>
-                    <h2 data-aos-delay="2700" data-aos="fade-up">성실함과 꼼꼼함으로 똘똘뭉친 <br>웹 퍼블리셔 김민철입니다.</h2>
+                    <h2 data-aos-delay="2700" data-aos="fade-up">성실함과 꼼꼼함으로 똘똘뭉친 <br>퍼블리셔 & 프론트엔드 개발자 김민철입니다.</h2>
                 </div>
 
                 <!-- 스크롤 버튼 -->
