--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                             <span class="main-intro-number">04</span>
                             <strong class="main-intro-title">education</strong>
                             <ul class="main-intro-sub-list">
-                                <!-- <li class="main-intro-sub-item">- 라인컴퓨터아트 (인테리어디자인)</li> -->
                                 <li class="main-intro-sub-item">- 그린컴퓨터아카데미 (웹디자인)</li>
+                                <li class="main-intro-sub-item">- 라인컴퓨터아트 (인테리어디자인)</li>
                                 <li class="main-intro-sub-item">- 그린컴퓨터아카데미 (AutoCad)</li>
                                 <li class="main-intro-sub-item">- 비트캠프 (Web 개발)</li>
                                 <li class="main-intro-sub-item">- 한국산업기술대학교</li>
@@ -290,12 +290,12 @@
                                     data-aos="fade-right">
                                     <div class="tag">Education</div>
                                     <div class="ml-3">
-                                        <!-- <div class="get-date">2022. 09 ~ 2023. 03</div>
-                                    <font size="2" color="gray">(라인컴퓨터아트)</font>
-                                    <span class="get-name">환경인테리어디자인 (AutoCad, 3dMax, Sketchup) 수료예정</span> -->
                                         <div class="get-date">2023. 02</div>
                                         <font size="2" color="gray">(강남 그린컴퓨터아카데미)</font>
                                         <span class="get-name">실무능력까지 길러주는 인터랙티브 웹 디자인</span>
+                                        <div class="get-date">2022. 09 ~ 2023. 01</div>
+                                        <font size="2" color="gray">(라인컴퓨터아트)</font>
+                                        <span class="get-name">환경인테리어디자인 (AutoCad, 3dMax, Sketchup)</span>
                                         <div class="get-date">2022. 08 ~ 2022. 09</div>
                                         <font size="2" color="gray">(그린컴퓨터아카데미)</font>
                                         <span class="get-name">빠른설계를위한 AutoCad</span>
